2001-01-07  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-nicola.el (skk-nicola-insert-kana): When RULE indicates a
	function, call it.

2000-12-16  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-nicola.el: Remove defvars for skk-dcomp.

2000-12-13  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-kanagaki-util.el (skk-kanagaki-toggle-rom-kana): Call
	`skk-modify-indicator-alist'.

	* skk-nicola.el (skk-mode-hook): Ditto.

2000-12-05  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* README.NICOLA.ja: New file.

	* skk-106-jis.el: Require `skk-nicola'.

	* skk-kanagaki.el (skk-insert@around@skk-kanagaki-ad): Set
	`skk-process-okuri-early' to nil.

2000-12-04  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* *: Modify Comments.

2000-12-03  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-nicola.el (skk-nicola-self-insert-lshift): Don't advise to
	do completion when `skk-henkan-active' is t.

2000-12-02  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-nicola.el (skk-nicola-self-insert-lshift): Modify for
	skk-dcomp.

2000-12-01  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* *: Modify comments.

2000-11-29  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-nicola.el
	(skk-nicola-self-insert-lshift@arond@skk-nicola-ad-for-dcomp): New
	advice.

2000-11-28  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-nicola.el: Integrate some pieces of advice into original
	functions.
	(skk-nicola-lshift-function): Simply call `skk-kakutei'.

2000-11-27  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-kanagaki-util.el (skk-kanagaki-bs): Use
	`skk-isearch-current-buffer'.

	* skk-kanagaki.el (skk-kanagaki-initialize,
	skk-kanagaki-adjust-rule-tree): New functions.

2000-11-25  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-nicola.el: Do nothing for tutorial under Emacs 18.
	(skk-nicola-lshift-keys): Rename from `skk-nicola-lshift-key'.
	(skk-nicola-rshift-keys): Rename from `skk-nicola-rshift-key'.
	(skk-nicola-turn-on-j-mode): Insert original characters.
