@@ -1,3 +1,8 @@
+2001-01-20  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>
+
+	* skk-nicola.el (skk-nicola-self-insert-lshift): Remove defvars
+	for skk-dcomp.
+
 2001-01-07  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>
 
 	* skk-nicola.el (skk-nicola-insert-kana): When RULE indicates a
